<resources>
    <string name="app_name">firstPost</string>
    <string name="_1">1</string>
    <string name="liked">liked</string>
    <string name="commented">commented</string>
    <string name="shared">shared</string>
    <string name="_0">0</string>
    <string name="avatar">avatar</string>
    <string name="geolocation">geolocation</string>
    <string name="repost">repost:</string>
    <string name="todo">TODO</string>
    <string name="go_to_web_site">GO TO WEB-SITE</string>
</resources>