<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/dateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:text=""
            android:textColor="#99999999"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/postTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text=""
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageButton
            android:id="@+id/likeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/liked"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postTxt"
            app:srcCompat="@drawable/not_liked" />

        <ImageButton
            android:id="@+id/comBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/commented"
            app:layout_constraintEnd_toStartOf="@+id/shareBtn"
            app:layout_constraintStart_toEndOf="@+id/likeBtn"
            app:layout_constraintTop_toBottomOf="@+id/postTxt"
            app:srcCompat="@drawable/not_commented" />

        <ImageButton
            android:id="@+id/shareBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/shared"
            app:layout_constraintStart_toEndOf="@+id/comBtn"
            app:layout_constraintTop_toBottomOf="@+id/postTxt"
            app:srcCompat="@drawable/not_shared" />

        <ImageButton
            android:id="@+id/locationBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/geolocation"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/shareBtn"
            app:layout_constraintTop_toBottomOf="@+id/postTxt"
            app:srcCompat="@drawable/location" />

        <TextView
            android:id="@+id/likeNmb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/_0"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/likeBtn" />

        <TextView
            android:id="@+id/comNmb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/_0"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/comBtn" />

        <TextView
            android:id="@+id/shareNmb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/_0"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shareBtn" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_android" />

        <TextView
            android:id="@+id/authTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/dateTv" />

        <TextView
            android:id="@+id/repost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repost"
            android:textSize="10sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/dateTv"
            app:layout_constraintLeft_toRightOf="@id/imageView" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text=""
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/postTxt" />

        <ImageButton
            android:id="@+id/playBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@id/postTxt"
            app:layout_constraintTop_toBottomOf="@id/authTv"
            app:srcCompat="@android:drawable/ic_media_play"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="63dp" />

        <Button
            android:id="@+id/linkBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/go_to_web_site"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@id/postTxt"
            app:layout_constraintTop_toBottomOf="@id/authTv" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>